package fr.uga.im2ag.m1info.chatservice.client.event.system;

/**
 * Defines the execution mode for event handling.
 */
public enum ExecutionMode {
    /** Synchronous execution mode */
    SYNC,
    /** Asynchronous execution mode */
    ASYNC
}
